tests are added